codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__navigation_reconnect__daemon_command_center_failed.snap
---
source: tui/src/app/tests/navigation_reconnect_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 100)"
---
  Agent command center
  Reconnect failed — agent list is stale; relaunch to retry
  ────────────────────────────────────────────────────────────────────────────────────────────────
  /tmp/project  2                                         │ Task details
  › ● Selected task  Working                              │
    ○ Vanished task  Ready                                │ Selected task
                                                          │ ● Working
                                                          │
                                                          │ Project
                                                          │ /tmp/project
                                                          │
                                                          │ Prompt
                                                          │ Selected task
                                                          │
                                                          │
                                                          │
                                                          │
                                                          │
                                                          │
  New task

› Keep this task draft!

   esc tasks · dispatch paused
